--- a/index.html
+++ b/index.html
@@ -2,30 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8 /">
-    <meta http-equiv="X-UA-Compatible">
-    content="IE=edge" />
-    <meta name="viewport"
-    content="width=device-width, initial-scale=1.0" /
-    >
-    <title>My First GIT</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Full stack session</title>
 </head>
 
 <body>
-    <h1>This is my first time using git</h1>
-    <h1>i just created my first git commit</h1>>
+    <h1 style='color:blue; font-size: 10px'>Heading One</h1>
+    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
+    <h1 style='color:red; font-size: 10px'>Heading One</h1>
+    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
+    <h1 style='color:red; font-size: 10px'>Heading One</h1>
+    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
 </body>
 
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
 </html>
