--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full stack session</title>
+    <style>
+        h1 {
+            color: brown;
+            font: size 200px;;
+        
+        }
+        p {
+            color:darkblue;
+            font-family: 100;
+
+        }
+
+        #first{
+            color: chartreuse;
+        }
+    </style>
 </head>
 
 <body>
-    <h1 style='color:blue; font-size: 10px'>Heading One</h1>
-    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
-    <h1 style='color:red; font-size: 10px'>Heading One</h1>
-    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
-    <h1 style='color:red; font-size: 10px'>Heading One</h1>
-    <p style="font-size: 20px; font-family: medium"> The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
+    <h1> inline >id selector >element selector</h1>
+    <h1 >Heading One</h1>
+    <p  > The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
+    <h1 style="color: cyan "id="first" >Heading One</h1>
+    <p > The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet. The characters are spread out evenly so that the reader's attention is focused on the layout of the text instead of its content</p>
 </body>
 
 </html>
