inline and block pointers

--- a/index.html
+++ b/index.html
@@ -12,16 +12,31 @@
             background-color: brown;
         }
         span{
+            width: 30px;
             height: 100px;
-            width: 300px;
             background-color: yellow;
         }
     </style>
 </head>
      
 <body>
-    <div></div>
-    <span>abcdef</span>
-    </body>
+    <div>
+        <h2> Pointers for block</h2>
+        <ol>
+             <li>width of a block level element is 100% of the viewport width</li>
+              <li>Height of a block is not set by default</li>
+              <li> Height and width can be explicitely set using CSS</li>
+        </ol>    
+    </div>
+    <span> 
+        i am subha
+        <h2>Pointers for inline</h2>
+        <ol>
+              <li>width of an inline element is dependent on the content</li>
+              <li>Height of a inline is not set by default</li>
+               <li> Height and width can't be explicitely set using CSS</li>
+        </ol>    
+   </span>
+</body>
 
 </html>
