text &allignment 4 & position=absolute, bottom

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             position: relative;
         }
         h2{
-            position: relative;
-            
+            position: absolute;
+            bottom: 0px;
             background-color:red ;
         }
         
