--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
            width: 100px;
            border-radius: 50%;
            transition-duration: 0.5s;
-           transition-timing-function: ease-in;
+           transition-timing-function: cubic-bezier(0.31,-0.87,0,-0.31);
+           transition-delay: 0.5s;
            
 
        }
        div.parent:hover div.child{
            background-color: red;
            transform: rotateX(90deg);
-           transform: scale(0,4)  translateX(300px) ;
+           transform:  translateX(300px) ;
            t;
        }
       
